--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -44,8 +44,9 @@
 }
 
 @mixin noDecor {
+  text-decoration: none;
   &:hover {
-    text-decoration: none;
+    text-decoration: underline;
   }
 }
 
