--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
 @import "utils/variables";
 @import "utils/mixins";
-@import "base/fonts";
 @import "base/base";
 @import "blocks/header";
+@import "blocks/menu";
+@import "blocks/services";
