--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,8 @@
-$font: 'PT Sans', Arial, sans-serif;
+$font: 'Roboto', Arial, sans-serif;
 $mobile-widths-only: "max-width: 767px";
 $tablet-widths: "min-width: 768px";
 $desktop-widths: "min-width: 1000px";
 $large-widths: "min-width: 1200px";
+$accentColor:#fe504f;
+$textColor:#adadad;
+$secondTextColor:#343434;
