--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -100,14 +100,40 @@ a {
 }
 section{
   text-align: center;
+  padding-top: 80px;
 }
 .section__title {
   color: $secondTextColor;
   font-size: 24px;
   font-weight: 700;
   text-transform: uppercase;
+  &--big{
+    max-width: 1122px;
+    color: white;
+    font-size: 34px;
+    text-transform: uppercase;
+  }
 }
 .section__text{
+  max-width: 875px;
+  margin-left: auto;
+  margin-right: auto;
   color: $textColor;
   font-size: 16px;
+}
+.section__underline{
+  position: relative;
+  font-size: 20px;
+  font-weight: 700;
+  color: $accentColor;
+  text-transform: uppercase;
+   &::after{
+         position: absolute;
+         display: block;
+         content: "";
+     bottom: -5px;
+     width: 50px;
+     height: 3px;
+     background-color: $accentColor;
+       }
 }
