--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,3 +6,6 @@
 @import "blocks/services";
 @import "blocks/contact";
 @import "blocks/about";
+@import "blocks/strategic";
+@import "blocks/news";
+@import "blocks/footer";
