--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -74,19 +74,21 @@ a {
 .container {
   @include container;
 }
-.logo{
+
+.logo {
   margin-bottom: 100px;
   color: $accentColor;
   font-size: 32px;
   font-weight: 700;
   text-transform: uppercase;
-  a{
+  a {
     @include noDecor;
   }
-  &--footer{
+  &--footer {
     margin-bottom: 0;
   }
 }
+
 .btn {
   background: $accentColor;
   border-radius: 50px;
@@ -109,24 +111,26 @@ a {
       background: lighten(#343434, 10%);
     }
   }
-  &--footer{
+  &--footer {
     float: right;
     width: 130px;
     line-height: 41px;
     height: 41px;
-
+    border: none;
   }
 }
-section{
+
+section {
   text-align: center;
   padding-top: 80px;
 }
+
 .section__title {
   color: $secondTextColor;
   font-size: 24px;
   font-weight: 700;
   text-transform: uppercase;
-  &--big{
+  &--big {
     max-width: 1122px;
     color: white;
     font-size: 34px;
@@ -135,26 +139,28 @@ section{
     margin-right: auto;
   }
 }
-.section__text{
+
+.section__text {
   max-width: 875px;
   margin-left: auto;
   margin-right: auto;
   color: $textColor;
   font-size: 16px;
 }
-.section__underline{
+
+.section__underline {
   position: relative;
   font-size: 20px;
   font-weight: 700;
   color: $accentColor;
   text-transform: uppercase;
-   &::after{
-         position: absolute;
-         display: block;
-         content: "";
-     bottom: -5px;
-     width: 50px;
-     height: 3px;
-     background-color: $accentColor;
-       }
+  &::after {
+    position: absolute;
+    display: block;
+    content: "";
+    bottom: -5px;
+    width: 50px;
+    height: 3px;
+    background-color: $accentColor;
+  }
 }
